Fixing overflow

--- a/www.html5rocks.com/static/css/index_page.css
+++ b/www.html5rocks.com/static/css/index_page.css
@@ -183,13 +183,13 @@
   color: #000;
 }
 #latest_articles_feed li a {
-  max-width: 75%;
+  max-width: 73%;
   display: inline-block;
   overflow: hidden;
   text-overflow: ellipsis;
 }
 #latest_articles_feed li span {
-  width: 30px;
+  width: 35px;
   display: inline-block;
 }
 
